# tp6-note-jack_nathan_eugenie_annabelle

./: CMakeLists.txt  ClassDigram.md  README.md  TODO.md  main.cpp
include/: Board.hpp  Bot.hpp  Case.hpp  Color.hpp  Display.hpp  GameHandler.hpp  Human.h  Human.hpp  Input.hpp  Pion.hpp  Player.h  Player.hpp  Size.hpp  Taille.hpp  gamehandler.hpp
src/: Board.cpp  Bot.cpp  Case.cpp  Display.cpp  GameHandler.cpp  Human.cpp  Input.cpp  Player.cpp  gamehandler.cpp
tests/: testBoard.cpp  testBot.cpp  testCase.cpp  testDisplay.cpp  testHuman.cpp  testInput.cpp  tests.hpp
